# yt-dlp-tk

./: .coveragerc  .env_vars  .gitattributes  .pre-commit-config.yaml  README.md  git_add.sh  pyproject.toml  pyshell.py  pytest.ini  rmcache.sh  yt-dlp-tk_technical_document.odt
data/: application-model-settings.md  application-model.md  mvp-graph.md
src/yt_dlp_tk/: __init__.py  __main__.py  console.py  data.py  interface.py  logging.py  model.py  presenter.py  protocols.py  run.py  signals.py  utils.py  view.py
src/yt_dlp_tk/_debug/: pickled_image.py
src/yt_dlp_tk/interface/: __init__.py  console.py  entry.py  text.py  tree.py  utils.py
src/yt_dlp_tk/tests/: _old_test_interface.py  info-json.pickle  test_interface.py  test_model.py  test_signals.py  test_utils.py  test_yt_funcs.py  widgets.py
src/yt_dlp_tk/yt_funcs/: core.py  postprocessing.py
