[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "yt-dlp-tk"
dynamic = ["version", "description"]
requires-python = ">=3.10"
license.file = "LICENSE"
readme = "README.md"
authors = [
    { name = "John Russell", email = "johndevlopment7@gmail.com" }
]
classifiers = ["Private :: Do Not Upload"]
dependencies = ["yt-dlp", "jsnake", "typing_extensions", "platformdirs"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.gui-scripts]
yt-dlp-tk = "yt_dlp_tk.__main__:main"

[tool.flit.module]
name = "yt_dlp_tk"
